--- a/src/app/task-detail.component.html
+++ b/src/app/task-detail.component.html
@@ -4,6 +4,6 @@
     <h6 class="card-subtitle mb-2 text-muted">{{ task.text }}</h6>
     <p class="card-text">{{ task.note }}</p>
     <button class="btn btn-link" (click)="gotoEdit()">Edit</button>
-    <button class="btn btn-link">Delete</button>
+    <button class="btn btn-link" (click)="delete()">Delete</button>
   </div>
 </div>
