--- a/src/app/add-task.component.html
+++ b/src/app/add-task.component.html
@@ -7,9 +7,9 @@
   </div>
   <div class="form-group">
     <label>Notes</label>
-    <textarea class="form-control" rows="2"></textarea>
+    <textarea class="form-control" rows="2" #taskNote></textarea>
     <small class="form-text text-muted">Optional</small>
   </div>
-  <button type="submit" (click)="add(taskText.value); taskText.value=''" class="btn btn-primary">Add Task</button>
+  <button type="submit" (click)="add(taskText.value, taskNote.value)" class="btn btn-primary">Add Task</button>
 </form>
 </div>
